[package]
name = "moba"
version = "0.1.0"
authors = ["MovingtoMars <definitelynotliam@gmail.com>"]

[features]
sdl2 = ["pistoncore-sdl2_window"]

[dependencies]
serde = "*"
serde_derive = "*"
serde_json = "*"
byteorder = "*"
chan = "*"
piston_window = "0.67" # weird input delay on 0.68 with glutin backend
conrod = "*"
ncollide = "*"
nalgebra = "*"
specs = "0.9"
gfx_device_gl = "*"
clap = "*"
shred = "0.4"
shred-derive = "*"

[dependencies.pistoncore-sdl2_window]
git = "https://github.com/PistonDevelopers/sdl2_window"
optional = true
